Agregando funcionalidades al carrito de compras